# newsletter

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  requirements.txt
.github/workflows/: daily.yml
data/: README.md  briefs.json  hypotheses.csv  observations.csv  predictions.csv  scorecard.json  scorecard.md
data/briefs/: 2026-06-01.json  2026-06-01.md  2026-06-02.json  2026-06-02.md  2026-06-03.json  2026-06-03.md  2026-06-04.json  2026-06-04.md  2026-06-05.json  2026-06-05.md  2026-06-08.json  2026-06-08.md  2026-06-09.json  2026-06-09.md  2026-06-10.json  2026-06-10.md  2026-06-11.json  2026-06-11.md  2026-06-12.json  2026-06-12.md  2026-06-15.json  2026-06-15.md  2026-06-16.json  2026-06-16.md  2026-06-17.json  2026-06-17.md  2026-06-18.json  2026-06-18.md  2026-06-19.json  2026-06-19.md  2026-06-20.json  2026-06-20.md  2026-06-21.json  2026-06-21.md  2026-06-22.json  2026-06-22.md  2026-06-23.json  2026-06-23.md  2026-06-24.json  2026-06-24.md  (+14 more)
data/snapshots/: 2026-06-16.md  2026-06-17.md
docs/: CHANGELOG.md  TODO.md  architecture.md  data-plane.md  frontend-plane.md  frontend-rebuild.md  intelligence-plane.md  news-sources.md  parked-scope.md  static-site-deployment-plan.md
docs/data-analyze/: date-range.md  raw-data-fetch-and-process.md
docs/refactor/: readme.md  v1-progress.md  v1.5-progress.md  v1.6-progress.md  v1.7-progress.md  v1.7-v1.8-plan.md  v1.8-progress.md  v2-progress.md
frontend/app/: .gitignore  index.html  (+5 more)
src/: catalog.rs  config.rs  error.rs  fred.rs  lib.rs  main.rs  model.rs  series.rs  store.rs  yahoo.rs
(+125 files in other folders)
