[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "fetch"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
